public static class Constants
{
    public static string AnimatorLastHorizontal = "LastHorizontal";
    public static string AnimatorLastVertical = "LastVertical";
    public static string AnimatorSpeed = "Speed";
    public static string AnimatorUseWater = "UseWater";


    public static string Sunday = "Sonntag";
    public static string Monday = "Montag";
    public static string Tuesday = "Dienstag";
    public static string Wednesday = "Mittwoch";
    public static string Thursday = "Donnerstag";
    public static string Friday = "Freitag";
    public static string Saturday = "Samstag";

    public static string CropBlockSoil = "Soil";
    public static string CropBlockCrop = "Crop";

    public enum Scenes
    {
        HouseScene,
        MainScene,
        PersistentScene
    }
}
